--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./typeOrm.config.ts",
+    "typeorm:fresh-migrations": "npm run typeorm schema:drop -- -d ./typeOrm.config.ts && npm run typeorm migration:run -- -d ./typeOrm.config.ts && npm run seed",
+    "typeorm:generate-migrations": "npm run typeorm -- -d ./typeOrm.config.ts migration:generate migrations",
+    "typeorm:create-migrations": "npm run typeorm -- -d ./typeOrm.config.ts migration:create -d ./migrations",
+    "typeorm:revert-migrations": "npm run typeorm -- -d ./typeOrm.config.ts migration:revert",
+    "seed": "ts-node ./src/seeders/seed.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -25,8 +32,13 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@youba/nestjs-dbvalidator": "^1.1.3",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17",
+    "typeorm-extension": "^3.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
